--- a/src/content/content.css
+++ b/src/content/content.css
@@ -1,8 +1,3 @@
-.maria {
-  font-size: 16px;
-  font-family: 'Courier New', Courier, monospace;
-}
-
 @keyframes cool-down {
   0% {
     opacity: 0.8;
@@ -52,4 +47,13 @@
 }
 .maria-toast--success::before {
   content: '\2713';
+}
+
+.maria-link {
+  font-weight: bold;
+  color: var(--primary-colour);
+  text-decoration: underline;
+}
+.maria-link:hover {
+  color: var(--primary-colour-hovered);
 }
