--- a/src/content/content.css
+++ b/src/content/content.css
@@ -31,7 +31,7 @@
   cursor: pointer;
   animation: cool-down 3s 1;
   z-index: 1000;
-  font-size: 2rem;
+  font-size: 1.2rem;
 }
 .maria-toast::before {
   position: absolute;
@@ -47,6 +47,13 @@
 }
 .maria-toast--success::before {
   content: '\2713';
+}
+.maria-toast--warning {
+  background-color: rgb(254, 192, 76);
+  color: #000;
+}
+.maria-toast--warning::before {
+  content: '\26a0';
 }
 
 .maria-link {
