--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,9 @@
   --shadow-colour: #ddd;
 
   --font-family: 'Courier New', Courier, monospace;
+  --font-size: 16px;
 
-  font-size: 16px;
+  font-size: var(--font-size);
   font-family: var(--font-family);
 }
 
@@ -41,6 +42,7 @@ hr {
 
 .mra-button {
   font-family: var(--font-family);
+  font-size: var(--font-size);
   background: none;
   border: none;
   box-shadow: 1px 1px 2px 0px var(--shadow-colour),
