--- a/src/content/content.css
+++ b/src/content/content.css
@@ -55,12 +55,45 @@
 .maria-toast--warning::before {
   content: '\26a0';
 }
+.maria-toast--error {
+  background-color: #ff3535;
+  color: #fff;
+}
+.maria-toast--error::before {
+  content: '\0021';
+}
 
 .maria-link {
-  font-weight: bold;
+  position: relative;
   color: var(--primary-colour);
+  font-weight: bold;
   text-decoration: underline;
 }
 .maria-link:hover {
   color: var(--primary-colour-hovered);
+}
+
+/* Detail display */
+.maria-detail {
+  position: fixed;
+  background-color: #fff;
+  max-width: 500px;
+  height: auto;
+  padding: 10px;
+  box-shadow: 1px 1px 5px 5px var(--shadow-colour);
+}
+
+.maria-tag-list {
+  display: block;
+  list-style-type: none;
+  padding: 0;
+  margin: 0 10px;
+}
+.maria-tag {
+  display: inline-flex;
+  padding: 2px 5px;
+  margin: 2px;
+  border-radius: 1rem;
+  background-color: var(--primary-colour);
+  color: #fff;
 }
