--- a/src/tabStore/tabStore.scss
+++ b/src/tabStore/tabStore.scss
@@ -13,22 +13,32 @@
     justify-content: space-between;
   }
 
+  &__controls {
+    display: flex;
+    align-items: center;
+    margin: 0 2px;
+  }
+
+  &__view-toggle {
+    padding: 2px;
+    height: 28px;
+  }
+
   &__name {
     background: transparent;
     display: flex;
     flex: 1;
     max-width: 400px;
   }
+
+  &__patterns {
+    margin: 10px 0;
+  }
 }
 
 .stored-links {
   list-style-type: none;
   padding: 8px 0;
-
-  &__item {
-    padding: 2px 0;
-    margin: 1px;
-  }
 
   &__button {
     font-size: 0.8rem;
@@ -53,8 +63,27 @@
   }
 }
 
-.stored-links__item:hover .stored-links__button {
-  visibility: visible;
-  opacity: 1;
-  pointer-events: unset;
+.stored-links__item {
+  padding: 2px 0;
+  margin: 1px;
+  cursor: grab;
+
+  &--chosen {
+    box-shadow: 1px 1px 2px 0px var(--primary-colour),
+      0px 0px 1px 0px var(--primary-colour);
+  }
+
+  &:hover .stored-links__button {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: unset;
+  }
+}
+
+.patterns {
+  display: flex;
+  flex: 1;
+  width: 100%;
+  max-width: 400px;
+  min-height: 150px;
 }
