Count. Mal QoL addition.

--- a/src/tabStore/tabStore.scss
+++ b/src/tabStore/tabStore.scss
@@ -31,6 +31,11 @@
     max-width: 400px;
   }
 
+  &__count {
+    font-size: 0.8rem;
+    margin: 2px 0;
+  }
+
   &__patterns {
     margin: 10px 0;
   }
