Improve tab store appearance. Prevent input style leak.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,7 +24,7 @@ hr {
   border-color: var(--primary-colour);
 }
 
-input {
+.mra-input {
   font-size: var(--font-size);
   font-family: var(--font-family);
 }
@@ -128,14 +128,14 @@ input {
 /* Link */
 .mra-link,
 .mra-link:visited {
-  @extend %anchor-shadow;
   color: var(--primary-colour);
   text-decoration: none;
 
   &:focus,
   &:hover,
   &:active {
-    color: var(--primary-colour-contrast);
+    color: var(--primary-colour-hovered);
+    transform: scale(1.01);
   }
 }
 
@@ -154,8 +154,8 @@ input {
   font-size: 0.9rem;
 }
 
-input[type='text'],
-select {
+.mra-input,
+.mra-select {
   font-size: inherit;
   padding: 1em 0.25em 0.1em;
   margin-bottom: 2px;
@@ -164,21 +164,21 @@ select {
   border-bottom: 1px solid var(--shadow-colour);
 }
 
-input[type='text']::-webkit-input-placeholder,
-select::-webkit-input-placeholder {
+.mra-input::-webkit-input-placeholder,
+.mra-select::-webkit-input-placeholder {
   opacity: 1;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
 
-input[type='text']:placeholder-shown:not(:focus)::-webkit-input-placeholder,
+.mra-input:placeholder-shown:not(:focus)::-webkit-input-placeholder,
 .has-float-label
-  select:placeholder-shown:not(:focus)::-webkit-input-placeholder {
+  .mra-select:placeholder-shown:not(:focus)::-webkit-input-placeholder {
   opacity: 0;
 }
 
-input[type='text']:focus,
-select:focus {
+.mra-input:focus,
+.mra-select:focus {
   outline: none;
   border-bottom: 2px solid var(--primary-colour);
 }
