--- a/src/tabStore/tabStore.scss
+++ b/src/tabStore/tabStore.scss
@@ -62,6 +62,11 @@
     }
   }
 
+  &__icon {
+    margin: 0 4px;
+    min-width: 16px;
+  }
+
   &__link {
     margin: 0 4px;
     padding: 2px;
@@ -69,6 +74,8 @@
 }
 
 .stored-links__item {
+  display: flex;
+  align-items: center;
   padding: 2px 0;
   margin: 1px;
   cursor: grab;
