--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -107,7 +107,7 @@
   align-items: center;
   width: 20px;
   height: 20px;
-  margin: 0 5px 5px;
+  margin: 0 5px;
 }
 
 .maria-tickbox input:before,
@@ -120,7 +120,7 @@
 
 .maria-tickbox input:before {
   content: '\2610\FE0E';
-  font-size: 1.5em;
+  font-size: 1.8em;
 }
 
 .maria-tickbox input:disabled:before {
