--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -216,3 +216,9 @@
   outline: none;
   border-bottom: 2px solid var(--primary-colour);
 }
+
+.maria-control {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
