RSS feed work part 1.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@
   --primary-colour-hovered: #cc0028;
   --primary-colour-contrast: #fff;
   --shadow-colour: #ddd;
+  --rss-viewer-sidebar-background-colour: #eee;
 
   --danger-colour: #f00000;
   --success-colour: #00f000;
