--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,8 @@
   --primary-colour: #88001b;
   --primary-colour-hovered: #cc0028;
   --primary-colour-contrast: #fff;
+  --faded-out: #666;
+
   --shadow-colour: #ddd;
   --rss-viewer-sidebar-background-colour: #eee;
 
