--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,7 @@
   --danger-colour: #f00000;
   --success-colour: #00f000;
   --warning-colour: #ff8500;
+  --information-colour: #0070ff;
 
   --anchor-shadow: #ccc;
   --anchor-shadow-hover: var(--primary-colour);
