--- a/src/rssViewer/rssViewer.scss
+++ b/src/rssViewer/rssViewer.scss
@@ -3,7 +3,7 @@
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(359deg);
   }
 }
 
@@ -42,8 +42,8 @@
   position: absolute;
   top: 0;
   right: 0;
-  padding: 0 5px;
-  margin: 13px 5px;
+  padding: 4px;
+  margin: 12px 5px;
   font-size: 1rem;
 
   &:focus,
@@ -53,13 +53,17 @@
     color: var(--primary-colour-contrast);
   }
 
-  & span {
-    animation: spin 0.5s ease-in-out infinite;
-    animation-play-state: paused;
+  &__icon {
+    display: block;
+    width: 1rem;
+    height: 1rem;
   }
 
-  &--loading span {
-    animation-play-state: running;
+  &--loading &__icon {
+    animation-name: spin;
+    animation-duration: 1.2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
   }
 }
 
