--- a/src/popup/popup.scss
+++ b/src/popup/popup.scss
@@ -62,3 +62,15 @@
     margin: 20px 0;
   }
 }
+
+.maria-voice-activator {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+
+  img {
+    margin: 2px 4px;
+  }
+}
