--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -217,6 +217,12 @@
       animation-delay: 0.4s;
     }
   }
+
+  &--mini &__orb {
+    width: 0.25rem;
+    height: 0.25rem;
+    margin: 0.6rem 0.05rem;
+  }
 }
 
 /* Other */
