--- a/src/rssViewer/rssViewer.scss
+++ b/src/rssViewer/rssViewer.scss
@@ -42,10 +42,10 @@
   }
 }
 
-.check-updates-button {
+.check-updates-button,
+.mark-all-read-button {
   position: absolute;
   top: 0;
-  right: 0;
   padding: 4px;
   margin: 12px 5px;
   font-size: 1rem;
@@ -62,12 +62,29 @@
     width: 1rem;
     height: 1rem;
   }
+}
+
+.check-updates-button {
+  right: 0;
 
   &--loading &__icon {
     animation-name: spin;
     animation-duration: 1.2s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
+  }
+}
+
+.mark-all-read-button {
+  right: 36px;
+
+  &.no-updates {
+    display: none;
+  }
+
+  &__icon {
+    position: relative;
+    top: -3px;
   }
 }
 
