--- a/src/exportImport/exportImport.scss
+++ b/src/exportImport/exportImport.scss
@@ -10,6 +10,11 @@
     justify-content: space-between;
     align-items: center;
   }
+
+  &__title {
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
 }
 
 .maria-textarea {
