Make rss feed list scrollable.

--- a/src/rssViewer/rssViewer.scss
+++ b/src/rssViewer/rssViewer.scss
@@ -29,6 +29,8 @@
       list-style-type: none;
       padding: 0;
       margin: 5px 0;
+      overflow: auto;
+      max-height: 500px;
     }
   }
 
