--- a/src/contentscript/contentscript.scss
+++ b/src/contentscript/contentscript.scss
@@ -1,67 +1,4 @@
-@keyframes cool-down {
-  0% {
-    opacity: 0.8;
-  }
-  50% {
-    opacity: 0.8;
-  }
-  75% {
-    opacity: 0.4;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-.maria-toast {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  display: flex;
-  flex-direction: column;
-  pointer-events: auto;
-  overflow: hidden;
-  margin: 0 0 6px;
-  padding: 10px 10px 10px 40px;
-  width: 300px;
-  border-radius: 3px;
-  box-shadow: 0 0 12px #999;
-  color: #fff;
-  opacity: 0;
-  cursor: pointer;
-  animation: cool-down 5s 1;
-  z-index: 10000;
-  font-size: 1.2rem;
-}
-.maria-toast::before {
-  position: absolute;
-  top: 50%;
-  left: 10px;
-  transform: translateY(-50%);
-  font-size: 1.6rem;
-}
-
-.maria-toast--success {
-  background-color: #228b22;
-  color: #fff;
-}
-.maria-toast--success::before {
-  content: '\2713';
-}
-.maria-toast--warning {
-  background-color: #fdad17;
-  color: #000;
-}
-.maria-toast--warning::before {
-  content: '\26a0';
-}
-.maria-toast--error {
-  background-color: #ff3535;
-  color: #fff;
-}
-.maria-toast--error::before {
-  content: '\0021';
-}
+@import '../styles/_toast.scss';
 
 .maria-link {
   position: relative;
